making progress with making this not read only and realizing that I don't really need js for this